--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Test: React </title>
+    <meta name="description" content="Code Assestment React" />
   </head>
   <body>
     <div id="root"></div>
